# project-01-multimodal-document-ai-workbench

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: README.md  errors.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: answers.py  documents.py  evaluations.py  retrieval.py  summaries.py
backend/app/core/: config.py
backend/app/data/evaluation_suites/: nc_dac_sample_contract_v1.json
backend/app/repositories/: documents.py
backend/app/schemas/: answers.py  documents.py  evaluations.py  retrieval.py  summaries.py
backend/app/services/: chunking.py  embeddings.py  evaluation.py  grounded_answer.py  pdf_parser.py  retrieval.py  storage.py  summary.py
backend/tests/: README.md  conftest.py  test_documents.py
data/: README.md
data/samples/: README.md
docs/: ARCHITECTURE.md  PLAN.md  RESULTS.md  TALKING_POINTS.md  WORKLOG.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: README.md  globals.css  layout.tsx  page.tsx
frontend/components/: README.md  document-uploader.tsx  retrieval-playground.tsx  summary-evaluation-panel.tsx
frontend/lib/: api.ts  document-ai.ts
infra/: README.md
scripts/: README.md
